[gd_scene load_steps=9 format=3 uid="uid://ts8i8yyx7cmi"]

[ext_resource type="Script" path="res://VNScripts/VNTextBox.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7mamb68vsrev" path="res://Resources/Graphics/VNUI/character_dialogue.png" id="2"]
[ext_resource type="FontFile" uid="uid://sn6c8aw65lhs" path="res://Resources/Fonts/orange-kid.bold.ttf" id="5_72qmk"]
[ext_resource type="FontFile" uid="uid://bicjs0tjxcn80" path="res://Resources/Fonts/orange-kid.regular.ttf" id="6"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="7"]

[sub_resource type="Shader" id="4"]
code = "shader_type canvas_item;

uniform bool all_colors = false;
uniform float threshold = 0.75;

void fragment(){
	COLOR *= texture(TEXTURE, UV);
	if (all_colors || (COLOR.r == COLOR.g && COLOR.g == COLOR.b && COLOR.r > 0.62)) { // Hack to only alpha-scissor the text on buttons
		COLOR.a = step(threshold, COLOR.a);
	}
}"

[sub_resource type="ShaderMaterial" id="5"]
shader = SubResource("4")
shader_parameter/all_colors = true
shader_parameter/threshold = 1.0

[sub_resource type="FontVariation" id="FontVariation_plsvc"]
base_font = ExtResource("6")
variation_embolden = 0.5

[node name="VNTextBox" type="Node2D"]
script = ExtResource("1")

[node name="TextBox" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2")

[node name="Label" type="RichTextLabel" parent="TextBox"]
material = ExtResource("7")
clip_contents = false
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 3308.0
offset_bottom = 681.0
scale = Vector2(0.04, 0.04)
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0.337255, 0.470588, 0.996078, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/normal_font = ExtResource("6")
theme_override_fonts/bold_font = ExtResource("5_72qmk")
theme_override_fonts/italics_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 180
theme_override_font_sizes/italics_font_size = 180
bbcode_enabled = true
text = "[i]I Today is my last day with me mom[/i] 
Test
Test"

[node name="NameLabel" type="RichTextLabel" parent="TextBox"]
material = SubResource("5")
layout_mode = 0
offset_left = 18.0
offset_top = 3.0
offset_right = 2093.0
offset_bottom = 278.0
scale = Vector2(0.04, 0.04)
mouse_filter = 2
theme_override_colors/default_color = Color(0.847059, 0.847059, 0.45098, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_fonts/bold_font = SubResource("FontVariation_plsvc")
theme_override_font_sizes/normal_font_size = 140
theme_override_font_sizes/bold_font_size = 200
bbcode_enabled = true
text = "[b]Mom:[/b]"

[node name="ShowTextTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[connection signal="timeout" from="ShowTextTimer" to="." method="_on_ShowTextTimer_timeout"]
